bk_ida/gccida/g3/store_fixed_bit_field
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/store_fixed_bit_field/src/expmed.c:1175:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v10; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/store_fixed_bit_field/src/expmed.c:1188:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v23; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/store_fixed_bit_field/src/expmed.c:1192:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode best_mode; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/store_fixed_bit_field/src/expmed.c:1193:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v28; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/store_fixed_bit_field/src/expmed.c:1234:18: error: invalid suffix 'xmode' on integer constant
v23 = *(short *)0xmode; 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/store_fixed_bit_field/src/expmed.c:1236:44: error: invalid suffix 'xmode' on integer constant
if ( v24 && v24 <= mode_bitsize[*(short *)0xmode] ) 
                                           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/store_fixed_bit_field/src/expmed.c:1238:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v25 = ( __int64)op0[1]; 
                ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/store_fixed_bit_field/src/expmed.c:1274:24: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
v7 = expand_shift_1( ( tree_code)v10, ( machine_mode)v7, v32, 0LL, ( rtx)1, v33); 
                       ^~~~~~~~~
                       tree_cons
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/store_fixed_bit_field/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/store_fixed_bit_field/src/expmed.c:1274:34: error: expected ')'
v7 = expand_shift_1( ( tree_code)v10, ( machine_mode)v7, v32, 0LL, ( rtx)1, v33); 
                                 ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/store_fixed_bit_field/src/expmed.c:1274:20: note: to match this '('
v7 = expand_shift_1( ( tree_code)v10, ( machine_mode)v7, v32, 0LL, ( rtx)1, v33); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/store_fixed_bit_field/src/expmed.c:1349:21: error: use of undeclared identifier 'machine_mode'
v7 = gen_lowpart( ( machine_mode)*( ( unsigned __int8 *)v8 + 2), v7); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/store_fixed_bit_field/src/expmed.c:1351:25: error: use of undeclared identifier 'machine_mode'
v7 = convert_to_mode( ( machine_mode)*( ( unsigned __int8 *)v8 + 2), v7, 1); 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/store_fixed_bit_field/src/expmed.c:1396:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v34.rtwint = ( __int64)v7->fld[0]; 
                       ^~~~~~~~~~
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/store_fixed_bit_field/src/obj/expmed.o] Error 1
